...
    val label: String,
    val icon: ImageVector,
) {
    HOME("Home", Icons.Default.Home),
    DAILY_CONTENT("Daily Content", Icons.Default.DateRange),
    AGGREGATOR("Aggregator", Icons.AutoMirrored.Filled.List),
    RSS_FEED("RSS Feed", Icons.Default.Favorite),

    WEATHER("Weather", Icons.Default.Favorite),

}

@Composable
...
